plugins {
    id 'java-library'
    id 'maven-publish'
}

test {
    useJUnitPlatform()
}

repositories {
    mavenLocal()
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    try {
        api project(":TranslateCore")
    } catch (UnknownProjectException ignored) {
        System.out.println("Could not find subModule of ShipsCore, using jit instead")
        api 'com.github.Minecraft-Ships:TranslateCore:master-SNAPSHOT'
    }
    compileOnly 'net.kyori:adventure-api:4.12.0' //some reason this doesnt get picked up
    compileOnly 'org.jetbrains:annotations:20.1.0'
    testImplementation 'org.mockito:mockito-inline:4.11.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

group = 'org.ships'
version = '6.0.0.0-Beta'
description = 'ShipsForCore'

java {
    sourceCompatibility = JavaLanguageVersion.of(11);
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = project.group
            artifactId = project.name
            version = project.version

            from components.java
        }
    }
}
